--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <html lang="en">
   <head>
-    <link
-      rel="shortcut icon"
-      href="/images/monitor.png"
-      type="image/png"
-    />
+    <link rel="shortcut icon" href="/images/monitor.png" type="image/png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -16,14 +12,21 @@
     <meta
       name="image"
       property="og:image"
-     content ="https://live.staticflickr.com/65535/50918366788_a9ede53a87.jpg"
+      content="https://live.staticflickr.com/65535/50918366788_a9ede53a87.jpg"
     />
-    <meta name="description" property="og:description" content="Fattylee portfolio website creating unparalleled modern SEO friendly modern website" />
+    <meta
+      name="description"
+      property="og:description"
+      content="Fattylee portfolio website creating unparalleled modern SEO friendly modern website"
+    />
     <meta name="author" content="Fatai Balogun" />
 
     <title>Portfolio Website | Fatai Balogun</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Redressed&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/13ee76e205.js"
@@ -31,30 +34,32 @@
     ></script>
     <script src="js/lazysizes.min.js" async=""></script>
   </head>
+
   <body>
     <nav>
       <div class="nav max-width">
-      <a href="#about" class="branding">FB</a>
-      <ul>
-        <a href="#about">About</a>
-        <a href="#project">Project</a>
-        <a href="#contact">Contact</a>
-      </ul>
+        <a href="#about" class="branding">FB</a>
+        <ul>
+          <a href="#about">About</a>
+          <a href="#project">Project</a>
+          <a href="#contact">Contact</a>
+        </ul>
       </div>
     </nav>
 
     <header id="about">
-      <h1><span class="greetings">Hello! 👋</span>
-      <p>I'm Fatai Balogun, a full-stack software engineer.</p>
-      <p>
-        I'm an experienced Software Engineer with a demonstrated history of
-        working in the information technology and services industry. I'm skilled
-        in Nodejs, Reactjs, MongoDB, and Web Development. I am looking forward
-        to building products that will challenge and test my competence in a way
-        that allows me to contribute effectively while also developing my
-        skills.
-      </p>
-</h1>
+      <h1>
+        <span class="greetings">Hello! 👋</span>
+        <p>I'm Fatai Balogun, a full-stack software engineer.</p>
+        <p>
+          I'm an experienced Software Engineer with a demonstrated history of
+          working in the information technology and services industry. I'm
+          skilled in Nodejs, Reactjs, MongoDB, and Web Development. I am looking
+          forward to building products that will challenge and test my
+          competence in a way that allows me to contribute effectively while
+          also developing my skills.
+        </p>
+      </h1>
     </header>
 
     <section id="project">
@@ -126,19 +131,18 @@
             ><i class="fab fa-github fa-2x"></i
           ></a>
         </div>
-        </a>
         <div class="project">
-        <a
-          href="https://fattylee-storybook.herokuapp.com/react/expenses"
-          target="_blank"
-        >
-          <img
-            class="lazyload"
-            data-src="https://live.staticflickr.com/65535/50916273756_71bfd6767e_z.jpg"
-            alt="expensify"
-          />
-          <p>Expensify</p>
-        </a><a
+          <a
+            href="https://fattylee-storybook.herokuapp.com/react/expenses"
+            target="_blank"
+          >
+            <img
+              class="lazyload"
+              data-src="https://live.staticflickr.com/65535/50916273756_71bfd6767e_z.jpg"
+              alt="expensify"
+            />
+            <p>Expensify</p> </a
+          ><a
             class="link-to-github"
             title="Open the github repo for this project"
             href="https://github.com/Fattylee/fattylee-storybook/tree/master/client/src/expensify"
@@ -149,7 +153,7 @@
         </div>
         <div class="project">
           <a href="https://fattylee-todos-api.herokuapp.com" target="_blank">
-             <img
+            <img
               class="lazyload"
               data-src="https://live.staticflickr.com/65535/50918143968_7481213684.jpg"
               alt="fattylee web services api"
@@ -166,18 +170,15 @@
           ></a>
         </div>
         <div class="project">
-        <a
-          href="https://fatai-balogun-portfolio.netlify.app"
-          target="_blank"
-        >
-          <img
-            class="lazyload"
-            data-src="https://live.staticflickr.com/65535/50918366788_a9ede53a87.jpg"
-            alt="portfolio website"
-          />
-          <p>Portfolio Website</p>
-        </a>
-        <a
+          <a href="https://fatai-balogun-portfolio.netlify.app" target="_blank">
+            <img
+              class="lazyload"
+              data-src="https://live.staticflickr.com/65535/50918366788_a9ede53a87.jpg"
+              alt="portfolio website"
+            />
+            <p>Portfolio Website</p>
+          </a>
+          <a
             class="link-to-github"
             title="Open the github repo for this project"
             href="https://github.com/Fattylee/fattylee-pure-portfolio"
@@ -185,12 +186,7 @@
             rel="noopener noreferrer"
             ><i class="fab fa-github fa-2x"></i
           ></a>
-      
-      </div>
-
-      
-
-      </div>
+        </div>
       </div>
     </section>
 
@@ -227,13 +223,24 @@
           </a>
         </li>
         <li>
-          <a href="mailto:fatai.balogun12@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job" target="_blank"><i class="fas fa-envelope" title="send mail"></i></a>
+          <a
+            href="mailto:fatai.balogun12@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job"
+            target="_blank"
+            ><i class="fas fa-envelope" title="send mail"></i
+          ></a>
         </li>
       </ul>
-    <div class="cv-parent">
-      <a class="cv" href="./Fatai_Balogun.pdf" target="_blank" rel="noopener noreferrer">Download my CV</a>
-    </div>
+      <div class="cv-parent">
+        <a
+          class="cv"
+          href="./Fatai_Balogun.pdf"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Download my CV</a
+        >
+      </div>
     </section>
+
     <footer>Made with <i class="fas fa-heart"></i> by Fatai Balogun</footer>
     <script src="/js/index.js"></script>
   </body>
