update project to include react-movie-app

--- a/index.html
+++ b/index.html
@@ -109,6 +109,24 @@
             ><i class="fab fa-github fa-2x"></i
           ></a>
         </div>
+
+        <div class="project">
+          <a href="https://fattylee-movie-app.netlify.app/" target="_blank">
+            <img
+              class="lazyload"
+              data-src="https://live.staticflickr.com/65535/51141899468_32cd027ec0_b.jpg"
+              alt="react movie app"
+            />
+            <p>React Movie App</p> </a
+          ><a
+            class="link-to-github"
+            title="Open the github repo for this project"
+            href="https://github.com/Fattylee/fattylee-movie-app"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github fa-2x"></i
+          ></a>
+        </div>
         <div class="project">
           <a
             href="https://fattylee-web-chat.herokuapp.com/
@@ -131,26 +149,7 @@
             ><i class="fab fa-github fa-2x"></i
           ></a>
         </div>
-        <div class="project">
-          <a
-            href="https://fattylee-storybook.herokuapp.com/react/expenses"
-            target="_blank"
-          >
-            <img
-              class="lazyload"
-              data-src="https://live.staticflickr.com/65535/50916273756_71bfd6767e_z.jpg"
-              alt="expensify"
-            />
-            <p>Expensify</p> </a
-          ><a
-            class="link-to-github"
-            title="Open the github repo for this project"
-            href="https://github.com/Fattylee/fattylee-storybook/tree/master/client/src/expensify"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github fa-2x"></i
-          ></a>
-        </div>
+
         <div class="project">
           <a href="https://fattylee-todos-api.herokuapp.com" target="_blank">
             <img
