refactor projects and update CV

--- a/index.html
+++ b/index.html
@@ -65,127 +65,7 @@
     <section id="project">
       <h2>Projects</h2>
       <div class="project-container">
-        <div class="project">
-          <a
-            href="https://fattylee-sayurs.netlify.app/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              class="lazyload"
-              data-src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
-              alt="sayurs"
-            />
-            <p>Sayurs</p>
-          </a>
-
-          <a
-            class="link-to-github"
-            title="Open the github repo for this project"
-            href="https://github.com/Fattylee/fattylee_social_network"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github fa-2x"></i
-          ></a>
-        </div>
-        <div class="project">
-          <a
-            href="https://fattylee-storybook.herokuapp.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              class="lazyload"
-              data-src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
-              alt="storybook"
-            />
-            <p>Storybook</p> </a
-          ><a
-            class="link-to-github"
-            title="Open the github repo for this project"
-            href="https://github.com/Fattylee/fattylee-storybook"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github fa-2x"></i
-          ></a>
-        </div>
-
-        <div class="project">
-          <a href="https://fattylee-movie-app.netlify.app/" target="_blank">
-            <img
-              class="lazyload"
-              data-src="https://live.staticflickr.com/65535/51141899468_32cd027ec0_b.jpg"
-              alt="react movie app"
-            />
-            <p>React Movie App</p> </a
-          ><a
-            class="link-to-github"
-            title="Open the github repo for this project"
-            href="https://github.com/Fattylee/fattylee-movie-app"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github fa-2x"></i
-          ></a>
-        </div>
-        <div class="project">
-          <a
-            href="https://fattylee-web-chat.herokuapp.com/
-"
-            target="_blank"
-          >
-            <img
-              class="lazyload"
-              data-src="https://live.staticflickr.com/65535/50915503213_9b11244564_z.jpg"
-              alt="web chat"
-            />
-            <p>Web chat</p>
-          </a>
-          <a
-            class="link-to-github"
-            title="Open the github repo for this project"
-            href="https://github.com/Fattylee/fattylee-web-chat"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github fa-2x"></i
-          ></a>
-        </div>
-
-        <div class="project">
-          <a href="https://fattylee-todos-api.herokuapp.com" target="_blank">
-            <img
-              class="lazyload"
-              data-src="https://live.staticflickr.com/65535/50918143968_7481213684.jpg"
-              alt="fattylee web services api"
-            />
-            <p>Fattylee web services api</p>
-          </a>
-          <a
-            class="link-to-github"
-            title="Open the github repo for this project"
-            href="https://github.com/Fattylee/fattylee-todos-api"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github fa-2x"></i
-          ></a>
-        </div>
-        <div class="project">
-          <a href="https://fatai-balogun-portfolio.netlify.app" target="_blank">
-            <img
-              class="lazyload"
-              data-src="https://live.staticflickr.com/65535/50918366788_a9ede53a87.jpg"
-              alt="portfolio website"
-            />
-            <p>Portfolio Website</p>
-          </a>
-          <a
-            class="link-to-github"
-            title="Open the github repo for this project"
-            href="https://github.com/Fattylee/fattylee-pure-portfolio"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github fa-2x"></i
-          ></a>
-        </div>
+        <!--  Inject Projects Here Via JS -->
       </div>
     </section>
 
